Bugfix #1059: remove send to desktop action, which is not useable with profile

--- a/patches/thunar/README
+++ b/patches/thunar/README
@@ -22,3 +22,6 @@
 
 * ulteo_tree_view.patch
   fix a segfault when we activate the tree view in thunar
+
+* ulteo_remove_sendto_desktop.patch
+  remove send to desktop action
